--- a/src/components/rich-text/rich-text.sandbox.html
+++ b/src/components/rich-text/rich-text.sandbox.html
@@ -5,19 +5,22 @@
         fonctionne sans options spécifiée
     </p>
     <p>
-        <div><button @click="focus = !focus">Change focus (now: {{ focus }})</button></div>
-        <div><button @click="placeholder = placeholder + 'a'">Change placeholder (now: {{ placeholder }})</button></div>
-        <div>
-            Error message: <input type="text" v-model="errorMessage" />
+        <div style="margin-bottom: 30px;">
+            <div><button @click="focus = !focus">Change focus (now: {{ focus }})</button></div>
+            <div><button @click="placeholder = placeholder + 'a'">Change placeholder (now: {{ placeholder }})</button></div>
+            <div>
+                Error message: <input type="text" v-model="errorMessage" />
+            </div>
+            <div>
+                Valid message: <input type="text" v-model="validMessage" />
+            </div>
+            <div>
+                Helper message: <input type="text" v-model="helperMessage" />
+            </div>
+            <div><button @click="waiting = !waiting">Waiting (now: {{ waiting }})</button></div>
+            <div><button @click="disabled = !disabled">Disabled (now: {{ disabled }})</button></div>
         </div>
-        <div>
-            Valid message: <input type="text" v-model="validMessage" />
-        </div>
-        <div>
-            Helper message: <input type="text" v-model="helperMessage" />
-        </div>
-        <div><button @click="waiting = !waiting">Waiting (now: {{ waiting }})</button></div>
-        <div><button @click="disabled = !disabled">Disabled (now: {{ disabled }})</button></div>
+
         <m-rich-text-edit v-model="model"
             :label="'test123123'"
             :max-width="'large'"
@@ -29,7 +32,7 @@
             :helper-message="helperMessage"
             :waiting="waiting"
             :disabled="disabled"></m-rich-text-edit>
-        <m-textfield v-model="model"
+        <!-- <m-textfield v-model="model"
             :label="'test123123'"
             :max-width="'large'"
             :placeholder="placeholder"
@@ -39,7 +42,7 @@
             :valid-message="validMessage"
             :helper-message="helperMessage"
             :waiting="waiting"
-            :disabled="disabled"></m-textfield>
+            :disabled="disabled"></m-textfield> -->
         <m-rich-text :value="model"></m-rich-text>
     </p>
 </div>
