MODUL-165 - Creation of new component for files

--- a/src/components/tree-node/tree-node.scss
+++ b/src/components/tree-node/tree-node.scss
@@ -1,7 +1,7 @@
 @import '../../styles/abstracts/variables';
 
 .m-tree {
-    &__single-file {
+    &__single-node {
         margin-left: $m-margin;
         user-select: none;
     }
