--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -2,20 +2,20 @@
     <div v-if="hasChild(node.content.idNode)" class="m-tree__with-childs">
         <div class="m-tree__with-childs__header" @click="openClose()"  :class="{'m-tree__with-childs__header__disabled': isDisabled()}">
             <span>{{ openCloseIcon() }}</span>
-            <m-file-tree v-if="isFile" :file="node.content" :isOpen="isOpen"></m-file-tree>
+            <m-file-tree v-if="isFileTree" :file="node.content" :isOpen="isOpen"></m-file-tree>
             <span>{{ nodeTitle }}</span>
         </div>
         <transition name="m-tree__with-childs__body">
             <ul v-show="isOpen" class="m-tree__with-childs__body">
-                <m-tree-node v-for="childs_node in node.childs" :isFile="isFile" :selection="selection" class="m-tree__with-childs__childs" @selectNode="selectNode" :node="childs_node" :openFolders="openFolders" :externalSelectedNode="externalSelectedNode" :icon="icon"></m-tree-node>
+                <m-tree-node v-for="childsNode in node.childs" class="m-tree__with-childs__childs" :isFileTree="isFileTree" :selection="selection" :node="childsNode" :externalSelectedNode="externalSelectedNode" :icon="icon" :isAllOpen="isAllOpen" @selectNode="selectNode"></m-tree-node>
             </ul>
         </transition>
     </div>
     <template v-else >
         <m-link :mode="linkMode" class="m-tree__single-node" @click="selectNode(node)" :disabled="isInactiveButton">
-            <m-file-tree v-if="isFile" :file="node.content"></m-file-tree>
+            <m-file-tree v-if="isFileTree" :file="node.content"></m-file-tree>
             <span>{{ nodeTitle }}</span>
         </m-link>
-        <m-icon v-if="isNodeSelected(node)" size="20px" :name="icon"></m-icon>
+        <m-icon v-if="isNodeSelected(node)" size="20px" :name="selectionIcon"></m-icon>
     </template>
 </li>
