add plugins for rich-text

--- a/src/components/rich-text/rich-text.sandbox.html
+++ b/src/components/rich-text/rich-text.sandbox.html
@@ -32,7 +32,7 @@
             :helper-message="helperMessage"
             :waiting="waiting"
             :disabled="disabled"></m-rich-text-edit>
-        <!-- <m-textfield v-model="model"
+        <m-textfield v-model="model"
             :label="'test123123'"
             :max-width="'large'"
             :placeholder="placeholder"
@@ -42,7 +42,7 @@
             :valid-message="validMessage"
             :helper-message="helperMessage"
             :waiting="waiting"
-            :disabled="disabled"></m-textfield> -->
+            :disabled="disabled"></m-textfield>
         <m-rich-text :value="model"></m-rich-text>
     </p>
 </div>
