--- a/src/components/rich-text/rich-text.sandbox.html
+++ b/src/components/rich-text/rich-text.sandbox.html
@@ -22,6 +22,7 @@
         </div>
 
         <m-rich-text-edit v-model="model"
+            toolbar-sticky-offset="300"
             :label="'test123123'"
             :max-width="'large'"
             :placeholder="placeholder"
