--- a/src/components/navbar-item/navbar-item.scss
+++ b/src/components/navbar-item/navbar-item.scss
@@ -164,7 +164,7 @@ a {
         font-weight: $m-font-weight--bold;
         color: $m-color--grey;
         text-transform: uppercase;
-        margin: $m-spacing--l;
+        padding: $m-spacing--l;
         transition: color 0.4s ease;
         display: block;
         text-align: center;
