--- a/src/components/tree-node/tree-node.scss
+++ b/src/components/tree-node/tree-node.scss
@@ -1,8 +1,14 @@
 @import '../../styles/abstracts/variables';
 
+$m-tree-node--icon-width: 18px;
+$m-tree-node--icon-height: 18px;
+$m-tree-node--icon-border-width: 1px;
+$m-accordion--icon-plus-width: 10px;
+$m-accordion--icon-minus-width: 1px;
+
 .m-tree {
     &__single-node {
-        margin-left: $m-margin;
+        margin-bottom: $m-margin--s;
         user-select: none;
     }
 
@@ -11,9 +17,65 @@
 
         &__header {
             cursor: pointer;
+            margin-bottom: $m-margin--s;
+            margin-left: $m-margin--xs;
 
             &__disabled {
                 color: $m-color--grey-light;
+
+                .m-tree__with-childs__header__icon {
+                    border-color: $m-color--grey-light;
+
+                    &::before,
+                    &::after {
+                        background: $m-color--grey-light;
+                    }
+                }
+            }
+
+            &__icon {
+                width: $m-tree-node--icon-width;
+                height: $m-tree-node--icon-height;
+                margin-right: $m-margin--xs;
+                border-width: $m-tree-node--icon-border-width;
+                border-color: $m-color--interactive;
+                border-style: solid;
+                display: inline-block;
+                text-align: center;
+                position: relative;
+
+                &::before,
+                &::after {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    content: '';
+                    background: $m-color--interactive;
+                    transform: translate3d(-50%, -50%, 0);
+                    transition: transform $m-transition-duration ease;
+                }
+
+                &::before {
+                    width: $m-accordion--icon-plus-width;
+                    height: $m-accordion--icon-minus-width;
+                }
+
+                &::after {
+                    transition: transform $m-transition-duration ease, opacity 0.6s ease;
+                    width: $m-accordion--icon-minus-width;
+                    height: $m-accordion--icon-plus-width;
+                }
+
+                &.m--is-closed {
+                    &::before,
+                    &::after {
+                        transform: translate3d(-50%, -50%, 0) rotate(90deg);
+                    }
+
+                    &::before {
+                        opacity: 0;
+                    }
+                }
             }
         }
 
@@ -32,7 +94,7 @@
         }
 
         &__childs {
-            margin-left: $m-margin--l;
+            margin-left: $m-margin--l + 4;
         }
     }
 }
