--- a/src/components/tree-node/tree-node.scss
+++ b/src/components/tree-node/tree-node.scss
@@ -7,6 +7,8 @@ $m-accordion--icon-plus-width: 10px;
 $m-accordion--icon-minus-width: 1px;
 
 .m-tree {
+    color: $m-color--text;
+
     &__single-node {
         margin-bottom: $m-margin--s;
         user-select: none;
@@ -20,17 +22,8 @@ $m-accordion--icon-minus-width: 1px;
             margin-bottom: $m-margin--s;
             margin-left: $m-margin--xs;
 
-            &__disabled {
+            .m--is-disabled & {
                 color: $m-color--grey-light;
-
-                .m-tree__with-children__header__icon {
-                    border-color: $m-color--grey-light;
-
-                    &::before,
-                    &::after {
-                        background: $m-color--grey-light;
-                    }
-                }
             }
 
             &__icon {
@@ -43,6 +36,15 @@ $m-accordion--icon-minus-width: 1px;
                 display: inline-block;
                 text-align: center;
                 position: relative;
+
+                .m--is-disabled & {
+                    border-color: $m-color--grey-light;
+
+                    &::before,
+                    &::after {
+                        background: $m-color--grey-light;
+                    }
+                }
 
                 &::before,
                 &::after {
