ENA2-1481 - bring back margin in scroll displacement because some skins need it

--- a/src/components/navbar/navbar.sandbox.html
+++ b/src/components/navbar/navbar.sandbox.html
@@ -83,7 +83,7 @@
     </m-navbar>
     <h4 class="m-u--margin-bottom--s">light</h4>
     <m-navbar skin="light" :selected.sync="selectedItem">
-        <m-navbar-item value="item1">
+                <m-navbar-item value="item1">
             1 souris verte
         </m-navbar-item>
         <m-navbar-item value="item2">
@@ -103,11 +103,26 @@
         </m-navbar-item>
         <m-navbar-item value="item7">
             7
+        </m-navbar-item>
+        <m-navbar-item value="item8">
+            8
+        </m-navbar-item>
+        <m-navbar-item value="item9">
+            9 singes
+        </m-navbar-item>
+        <m-navbar-item value="item10">
+            10 chèvres et 10 moutons
+        </m-navbar-item>
+        <m-navbar-item value="item11">
+            11 barnacles magestueuses volant vers le lointain...
+        </m-navbar-item>
+        <m-navbar-item value="item12">
+            12 zaine d'oeufs
         </m-navbar-item>
     </m-navbar>
     <h4 class="m-u--margin-bottom--s">plain (aka no style)</h4>
     <m-navbar skin="plain" :selected.sync="selectedItem">
-        <m-navbar-item value="item1">
+                <m-navbar-item value="item1">
             1 souris verte
         </m-navbar-item>
         <m-navbar-item value="item2">
@@ -127,11 +142,26 @@
         </m-navbar-item>
         <m-navbar-item value="item7">
             7
+        </m-navbar-item>
+        <m-navbar-item value="item8">
+            8
+        </m-navbar-item>
+        <m-navbar-item value="item9">
+            9 singes
+        </m-navbar-item>
+        <m-navbar-item value="item10">
+            10 chèvres et 10 moutons
+        </m-navbar-item>
+        <m-navbar-item value="item11">
+            11 barnacles magestueuses volant vers le lointain...
+        </m-navbar-item>
+        <m-navbar-item value="item12">
+            12 zaine d'oeufs
         </m-navbar-item>
     </m-navbar>
     <h4 class="m-u--margin-bottom--s">arrow</h4>
     <m-navbar skin="arrow" :selected.sync="selectedItem">
-        <m-navbar-item value="item1">
+                <m-navbar-item value="item1">
             1 souris verte
         </m-navbar-item>
         <m-navbar-item value="item2">
@@ -151,11 +181,26 @@
         </m-navbar-item>
         <m-navbar-item value="item7">
             7
+        </m-navbar-item>
+        <m-navbar-item value="item8">
+            8
+        </m-navbar-item>
+        <m-navbar-item value="item9">
+            9 singes
+        </m-navbar-item>
+        <m-navbar-item value="item10">
+            10 chèvres et 10 moutons
+        </m-navbar-item>
+        <m-navbar-item value="item11">
+            11 barnacles magestueuses volant vers le lointain...
+        </m-navbar-item>
+        <m-navbar-item value="item12">
+            12 zaine d'oeufs
         </m-navbar-item>
     </m-navbar>
     <h4 class="m-u--margin-bottom--s">light-tab</h4>
     <m-navbar skin="light-tab" :selected.sync="selectedItem">
-        <m-navbar-item value="item1">
+                <m-navbar-item value="item1">
             1 souris verte
         </m-navbar-item>
         <m-navbar-item value="item2">
@@ -175,11 +220,26 @@
         </m-navbar-item>
         <m-navbar-item value="item7">
             7
+        </m-navbar-item>
+        <m-navbar-item value="item8">
+            8
+        </m-navbar-item>
+        <m-navbar-item value="item9">
+            9 singes
+        </m-navbar-item>
+        <m-navbar-item value="item10">
+            10 chèvres et 10 moutons
+        </m-navbar-item>
+        <m-navbar-item value="item11">
+            11 barnacles magestueuses volant vers le lointain...
+        </m-navbar-item>
+        <m-navbar-item value="item12">
+            12 zaine d'oeufs
         </m-navbar-item>
     </m-navbar>
     <h4 class="m-u--margin-bottom--s">dark-tab</h4>
     <m-navbar skin="dark-tab" :selected.sync="selectedItem">
-        <m-navbar-item value="item1">
+                <m-navbar-item value="item1">
             1 souris verte
         </m-navbar-item>
         <m-navbar-item value="item2">
@@ -199,6 +259,21 @@
         </m-navbar-item>
         <m-navbar-item value="item7">
             7
+        </m-navbar-item>
+        <m-navbar-item value="item8">
+            8
+        </m-navbar-item>
+        <m-navbar-item value="item9">
+            9 singes
+        </m-navbar-item>
+        <m-navbar-item value="item10">
+            10 chèvres et 10 moutons
+        </m-navbar-item>
+        <m-navbar-item value="item11">
+            11 barnacles magestueuses volant vers le lointain...
+        </m-navbar-item>
+        <m-navbar-item value="item12">
+            12 zaine d'oeufs
         </m-navbar-item>
     </m-navbar>
 </div>
