--- a/src/components/navbar/navbar.sandbox.html
+++ b/src/components/navbar/navbar.sandbox.html
@@ -37,7 +37,7 @@
             10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11 barnacles magestueuses volant vers le lointain...
+            11 barnacles magestueuses volant vers le lointain
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
@@ -75,7 +75,7 @@
             10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11 barnacles magestueuses volant vers le lointain...
+            11 barnacles magestueuses volant vers le lointain
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
@@ -114,7 +114,7 @@
             10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11 barnacles magestueuses volant vers le lointain...
+            11 barnacles magestueuses volant vers le lointain
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
@@ -153,7 +153,7 @@
             10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11 barnacles magestueuses volant vers le lointain...
+            11 barnacles magestueuses volant vers le lointain
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
@@ -192,7 +192,7 @@
             10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11 barnacles magestueuses volant vers le lointain...
+            11 barnacles magestueuses volant vers le lointain
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
@@ -231,7 +231,7 @@
             10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11 barnacles magestueuses volant vers le lointain...
+            11 barnacles magestueuses volant vers le lointain
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
@@ -270,7 +270,7 @@
             10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11 barnacles magestueuses volant vers le lointain...
+            11 barnacles magestueuses volant vers le lointain
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
