MODUL225 - Create m-menu-item-add and m-menu-item-delete

--- a/src/components/menu/menu.sandbox.html
+++ b/src/components/menu/menu.sandbox.html
@@ -7,6 +7,10 @@
         </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
         -->
     </p>
+    <m-menu>
+        <m-menu-item-add></m-menu-item-add>
+        <m-menu-item-delete></m-menu-item-delete>
+    </m-menu>
     <p>
         <m-menu>
             <m-menu-item action="add"></m-menu-item>
