--- a/src/components/menu/menu.sandbox.html
+++ b/src/components/menu/menu.sandbox.html
@@ -9,29 +9,21 @@
     </p>
     <m-menu>
         <m-menu-item-add></m-menu-item-add>
+        <m-menu-item-edit></m-menu-item-edit>
+        <m-menu-item-archive></m-menu-item-archive>
         <m-menu-item-delete></m-menu-item-delete>
     </m-menu>
-    <p>
-        <m-menu>
-            <m-menu-item action="add"></m-menu-item>
-            <m-menu-item action="edit"></m-menu-item>
-            <m-menu-item action="delete"></m-menu-item>
-            <m-menu-item action="archive"></m-menu-item>
-        </m-menu>
-
-        <m-menu>
-            <m-menu-item>Test 1</m-menu-item>
-            <m-menu-item>Test 2</m-menu-item>
-            <m-menu-item icon-name="clock">Temps</m-menu-item>
-        </m-menu>
-
-        <m-menu>
-            <m-menu-item>Test 1</m-menu-item>
-            <m-menu-item :disabled="true">Test 2</m-menu-item>
-            <m-menu-item>Test 3</m-menu-item>
-            <m-menu-item>Test 4</m-menu-item>
-            <m-menu-item>Test 5</m-menu-item>
-            <m-menu-item>Test 6</m-menu-item>
-        </m-menu>
-    </p>
+    <m-menu>
+        <m-menu-item>Test 1</m-menu-item>
+        <m-menu-item>Test 2</m-menu-item>
+        <m-menu-item icon-name="m-svg__clock">Temps</m-menu-item>
+    </m-menu>
+    <m-menu>
+        <m-menu-item>Test 1</m-menu-item>
+        <m-menu-item :disabled="true">Test 2</m-menu-item>
+        <m-menu-item>Test 3</m-menu-item>
+        <m-menu-item>Test 4</m-menu-item>
+        <m-menu-item>Test 5</m-menu-item>
+        <m-menu-item>Test 6</m-menu-item>
+    </m-menu>
 </div>
